# getridofnef

./: README.md  pyproject.toml
src/arijit/getridofnef/: main.py
